--- a/Kelson.RoleSyncBot/Kelson.RoleSyncBot.csproj
+++ b/Kelson.RoleSyncBot/Kelson.RoleSyncBot.csproj
@@ -9,7 +9,7 @@
 		<PublishSingleFile>true</PublishSingleFile>
 		<StaticallyLinked>true</StaticallyLinked>
 		<PublishTrimmed>true</PublishTrimmed>
-		<SatelliteResourceLanguages>en</SatelliteResourceLanguages>
+		<InvariantGlobalization>true</InvariantGlobalization>
 		<Version>1.0.1.0</Version>
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 	</PropertyGroup>
