--- a/Kelson.RoleSyncBot/Dockerfile
+++ b/Kelson.RoleSyncBot/Dockerfile
@@ -1,5 +1,5 @@
 FROM mcr.microsoft.com/dotnet/runtime-deps:6.0.0-rc.1-alpine3.14
-# source.tar.gz is supplied by the Release webhook listener
+RUN apk add icu-libs && apk add libstdc++ && apk add libgcc
 RUN mkdir /application/
 ADD bin/Release/net6.0/linux-musl-x64/publish /application/
 WORKDIR /application/
